# FFMSP

./: .gitignore  CMakeLists.txt  README.md
include/: cmsa.h  grasp.h  greedy.h  utils.h
scripts/: run_test.sh
scripts/results/: Greedy-100.txt  Greedy-200.txt  GreedyA-100.txt  GreedyA-200.txt
src/: a.out  greedy.cpp  greedy.h  main.cpp  tests.cpp
src/libs/: cmsa.cpp  grasp.cpp  greedy.cpp  utils.cpp
